--- a/package.json
+++ b/package.json
@@ -30,8 +30,10 @@
     "file-loader": "^6.0.0",
     "html-webpack-plugin": "^4.3.0",
     "mini-css-extract-plugin": "^0.9.0",
+    "optimize-css-assets-webpack-plugin": "^5.0.3",
     "source-map-loader": "^1.0.0",
     "style-loader": "^1.2.1",
+    "terser-webpack-plugin": "^3.0.6",
     "ts-loader": "^7.0.5",
     "typescript": "^3.9.6",
     "url-loader": "^4.1.0",
