--- a/package.json
+++ b/package.json
@@ -10,6 +10,18 @@
     "start": "cross-env NODE_ENV=development webpack-dev-server --mode=development --config ./build/webpack.config.js",
     "build": "cross-env NODE_ENV=production webpack --mode=production --config ./build/webpack.config.js"
   },
+  "browserslist": {
+    "production": [
+      ">0.2%",
+      "not dead",
+      "not op_mini all"
+    ],
+    "development": [
+      "last 1 chrome version",
+      "last 1 firefox version",
+      "last 1 safari version"
+    ]
+  },  
   "author": "",
   "license": "ISC",
   "devDependencies": {
