--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "type-check:watch": "npm run type-check -- --watch",
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "cross-env NODE_ENV=development webpack-dev-server --mode=development --config ./build/webpack.config.js",
-    "build": "cross-env NODE_ENV=production webpack --mode=production --config ./build/webpack.config.js"
+    "build": "cross-env NODE_ENV=production webpack --mode=production --config ./build/webpack.config.js",
+    "lint": "eslint 'src/**/*.{js,ts,tsx}' --quiet --fix"
   },
   "browserslist": {
     "production": [
@@ -21,7 +22,7 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
-  },  
+  },
   "author": "",
   "license": "ISC",
   "devDependencies": {
@@ -35,14 +36,23 @@
     "@babel/preset-env": "^7.10.4",
     "@babel/preset-react": "^7.10.4",
     "@babel/preset-typescript": "^7.10.4",
+    "@typescript-eslint/eslint-plugin": "^3.6.0",
+    "@typescript-eslint/parser": "^3.6.0",
     "babel-loader": "^8.1.0",
     "clean-webpack-plugin": "^3.0.0",
     "cross-env": "^7.0.2",
     "css-loader": "^3.6.0",
+    "eslint": "^7.4.0",
+    "eslint-config-prettier": "^6.11.0",
+    "eslint-plugin-prettier": "^3.1.4",
+    "eslint-plugin-react": "^7.20.3",
     "file-loader": "^6.0.0",
     "html-webpack-plugin": "^4.3.0",
+    "husky": "^4.2.5",
+    "lint-staged": "^10.2.11",
     "mini-css-extract-plugin": "^0.9.0",
     "optimize-css-assets-webpack-plugin": "^5.0.3",
+    "prettier": "^2.0.5",
     "source-map-loader": "^1.0.0",
     "style-loader": "^1.2.1",
     "terser-webpack-plugin": "^3.0.6",
@@ -64,5 +74,15 @@
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-router-dom": "^5.2.0"
+  },
+  "husky": {
+    "hooks": {
+      "pre-commit": "lint-staged"
+    }
+  },
+  "lint-staged": {
+    "*.{js,ts,tsx}": [
+      "eslint --cache --fix"
+    ]
   }
 }
